--- a/main.css
+++ b/main.css
@@ -2,6 +2,11 @@
     box-sizing: border-box
 }
 
+html {
+    font-family: "Jost", sans-serif;
+    font-size: 22px;
+}
+
 .container {
     width: 1200px;
     margin: 0 auto;
