--- a/main.css
+++ b/main.css
@@ -21,21 +21,22 @@ html {
     font-size: 18px;
 }
 
-.button1{
-    background-image: url(photo.button/4.png);
-    width: 207px;
-    height: 71px;
-    padding: 22px 67px 22px 34px;
-}
 
-.button2{
+.button-dark{
     background-image: url(photo.button/1.png);
     width: 263px;
     height: 71px;
     padding: 21px 67px 23px 34px;
 }
 
-.button3{
+.button-dark{
+    background-image: url(photo.button/4.png);
+    width: 207px;
+    height: 71px;
+    padding: 22px 67px 22px 34px;
+}
+
+.button-light{
     background-color: #F4F0EC;
     border-radius: 100px;
     border: 2px solid  #F4F0EC;;
@@ -47,7 +48,7 @@ html {
     background-position: center;
 }
 
-.button4{
+.button-arrow-round{
     background-image: url(photo.button/2.png);
     background-color: #CDA274;
     border: 2px solid #CDA274;
