--- a/main.css
+++ b/main.css
@@ -12,36 +12,52 @@ html {
     margin: 0 auto;
 }
 
-.allbutton{
+.button{
+    display: flex;
     border-radius: 18px;
     color: #FFFFFF;
     font-size: 18px;
     height: 71px;
     border: 2px solid;
-    background-repeat:  no-repeat;
-    background-position: center;
 }
 
 
 .button-dark{
-    background-image: url(photo.button/1.png);
+    background: #292F36;
+    border-color:#292F36;
     width: 207px;
-    padding: 22px 67px 22px 34px;
+    padding-left: 34px;
+    padding-right: 21px;
+    align-items: center;
 }
 
 .button-light{
     background-color: #F4F0EC;
     border-color:#F4F0EC;
     border-radius: 100px;
-    background-image: url(photo.button/3.png);
     width: 70px;
     height: 70px;
-    padding: 28.31px 31.29px 28.31px 32.77px;
 }
 
 .button-arrow-round{
-    background-image: url(photo.button/2.png);
+    background-color: #CDA274;
+    border-color:#CDA274;
     box-shadow: 1px 0px 18px rgba(0, 0, 0, 0.2);
     width: 241px;
-    padding: 21px 67px 23px 34px;
+    align-items: center;
+    padding-left: 34px;
+    padding-right: 7px;
+}
+
+.button-dark img{
+    padding-left: 20px;
+}
+
+.button-light img{
+    padding-left: 23.77px;
+    padding-top: 23.31px;
+}
+
+.button-arrow-round img{
+    padding-left: 20px;
 }
