--- a/main.css
+++ b/main.css
@@ -11,3 +11,21 @@ html {
     width: 1200px;
     margin: 0 auto;
 }
+
+.our_clients{
+    display: flex;
+    width: 1200px;
+    height: 103px;
+    margin: 0 120px;
+    white-space: nowrap; 
+}
+
+.client{
+    display: flex;
+    margin:auto 0;
+    padding-left: 130px;
+}
+
+.client1{
+    padding-left: 0;
+}
