--- a/main.css
+++ b/main.css
@@ -204,10 +204,10 @@ height: 30px;
 
 .banner{
   background-image:url(assets/bghone.png) ;
-  background-size: 1440px 831px;
+  background-size: 100% 831px;
   background-repeat: no-repeat;
   height: 831px;
-  width: 1440px;
+  width: 100%;
 }
 
 .bigtext{
@@ -219,5 +219,4 @@ height: 30px;
 
 .text{
   padding: 0 743px 35px 120px;
-  color: #4D5053;
 }
