--- a/main.css
+++ b/main.css
@@ -116,7 +116,6 @@ html {
   letter-spacing: 0.22px;
 }
 
-
 .service-item-title {
   font-family: "DM Serif Display";
   font-weight: 400;
@@ -166,37 +165,119 @@ html {
   text-decoration: none;
 }
 .headertext {
-margin: 20px;
-height: 30px;
+  margin: 20px;
+  height: 30px;
 }
 .navigation-container {
-    display: flex;
-}
-
-.our_clients{
   display: flex;
 }
 
-.clients{
-    margin:auto 0;
-    padding-left: 130px;
+.our_clients {
+  display: flex;
 }
 
-.client1{
-    padding-left: 0;
+.clients {
+  margin: auto 0;
+  padding-left: 130px;
+}
+
+.client1 {
+  padding-left: 0;
 }
 
 .logo {
-    height: 50px;
-    width: 177px;
+  height: 50px;
+  width: 177px;
 }
 
 .headerconteiner {
-    display: flex;
-    flex-direction: row;
-   justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .headertext:hover {
-    color: #CDA274;
+  color: #cda274;
+}
+
+.section_info_container {
+  display: flex;
+  align-items: center;
+  margin-top: 100px;
+  margin-bottom: 140px;
+}
+
+.sctn_info_block {
+  width: 592px;
+  margin-right: 16px;
+}
+
+.sctn_info_image {
+  width: 592px;
+  height: 608px;
+}
+
+.button-dark-section_info {
+  width: 263px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.sctn_info_block-title {
+  width: 450px;
+  font-family: "DM Serif Display";
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 65px;
+  letter-spacing: 0.22px;
+  color: #292f36;
+  margin-top: 13px;
+  margin-bottom: 42px;
+}
+
+.sctn_info_block-text {
+  width: 531px;
+  font-weight: 400;
+  line-height: 33px;
+  letter-spacing: 0.22px;
+  color: #4d5053;
+}
+
+.sctn_info_block-text-2 {
+  width: 492px;
+  margin-bottom: 30px;
+}
+
+.sctn_info_card {
+  display: flex;
+  width: 532px;
+}
+
+.info_card-item {
+  width: 154px;
+  margin-top: 17px;
+  margin-bottom: 47px;
+}
+
+.info_card-image {
+  width: 93px;
+  height: 93px;
+  margin-top: 10px;
+  margin-right: 20px;
+  margin-bottom: 40px;
+}
+
+.info_card-text {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 36px;
+  letter-spacing: 0.22px;
+  color: #4d5053;
+}
+
+.info_card-text2 {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 33px;
+  color: #4d5053;
 }
