--- a/main.css
+++ b/main.css
@@ -47,9 +47,12 @@ html {
   margin-bottom: 30px;
 }
 
+.ftr-card-3 {
+  width: 321px;
+}
+
 .ftr-list-3 {
   width: 321px;
-  margin-right: 136px;
 }
 
 .button {
@@ -199,12 +202,10 @@ height: 30px;
 }
 
 .the_line{
-  border: 1px solid #E5E5E5;;
+  border: 1px solid #E5E5E5;
+  width: 1440px;
 }
 
-.ftr-logo-card{
-  margin-left: 120px;
-}
 
 .ftr-text{
   color: #4D5053;
@@ -218,4 +219,35 @@ height: 30px;
 
 .logoIG{
   margin-right: 0;
+}
+
+.copyright{
+  margin: 35px 325px 36px;
+}
+
+.ftr-ftr{
+  width: 1440px;
+}
+
+.contactUs{
+  background-color: #292F36;
+  border-radius: 70px;
+  margin: 141px 120px 129px;
+}
+
+
+.Wjti{
+  color: #ffffff;
+  font-size: 50px;
+  font-family: 'DM Serif Display', serif;
+  padding: 100px 333px 9px;
+}
+
+.lastbutton{
+  padding: 31px 485px 95px 474px;
+}
+
+.CUGaFC{
+  color: #ffffff;
+  padding: 0 414px 0 415px;
 }
