--- a/main.css
+++ b/main.css
@@ -200,7 +200,7 @@ html {
   color: #cda274;
 }
 
-.section_info_container {
+.sctn_info_container {
   display: flex;
   align-items: center;
   margin-top: 100px;
@@ -217,7 +217,7 @@ html {
   height: 608px;
 }
 
-.button-dark-section_info {
+.button-dark-sctn_info {
   width: 263px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -240,44 +240,45 @@ html {
   font-weight: 400;
   line-height: 33px;
   letter-spacing: 0.22px;
+  margin-right: 61px;
   color: #4d5053;
-}
-
-.sctn_info_block-text-2 {
-  width: 492px;
-  margin-bottom: 30px;
 }
 
 .sctn_info_card {
   display: flex;
+  align-items: center;
   width: 532px;
+  height: 100%;
 }
 
 .info_card-item {
   width: 154px;
-  margin-top: 17px;
-  margin-bottom: 47px;
+  font-weight: 400;
+  color: #4d5053;
+  margin-top: 40px;
+  margin-bottom: 50px;
 }
 
-.info_card-image {
+.info_card-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 93px;
   height: 93px;
-  margin-top: 10px;
+  background: #f4f0ec;
+  border-radius: 50%;
+  border: none;
   margin-right: 20px;
-  margin-bottom: 40px;
+  margin-top: 10px;
 }
 
-.info_card-text {
-  font-weight: 400;
+.info_card-phone-number {
   font-size: 24px;
   line-height: 36px;
   letter-spacing: 0.22px;
-  color: #4d5053;
 }
 
-.info_card-text2 {
-  font-weight: 400;
+.info_card-call-to-action {
   font-size: 22px;
   line-height: 33px;
-  color: #4d5053;
 }
