--- a/main.css
+++ b/main.css
@@ -241,21 +241,24 @@ height: 30px;
   color: #ffffff;
   font-size: 50px;
   font-family: 'DM Serif Display', serif;
-  padding: 100px 333px 9px;
+  padding: 100px 0 9px;
+  text-align: center;
 }
 
 .lastbutton{
-  padding: 31px 0 95px 474px;
-  width: 485px;
+  padding: 31px 0 95px 0;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .CUGaFC{
   color: #ffffff;
-  padding-left: 415px;
+  text-align: center;
 }
 
 .nikname{
-  color: #CDA274;;
+  color: #CDA274;
 }
 
 .ftr{
