fix problems with validator

--- a/main.css
+++ b/main.css
@@ -196,110 +196,108 @@ html {
   justify-content: space-between;
 }
 
-.banner{
-  background-image:url(assets/bghone.png) ;
+.banner {
+  background-image: url(assets/bghone.png);
   background-size: 100%;
   background-repeat: no-repeat;
   height: 831px;
   width: 100%;
 }
 
-.bigtitle{
+.bigtitle {
   padding: 188px 0 19px 120px;
-  font-family: 'DM Serif Display', serif;
+  font-family: "DM Serif Display", serif;
   font-size: 80px;
   color: #292f36;
   width: 595px;
 }
 
-.title{
+.title {
   padding: 0 0 35px 120px;
   width: 577px;
 }
 
-.button-dark-top{
-  margin-left: 120px; 
+.button-dark-top {
+  margin-left: 120px;
 }
 
 .headertext:hover {
-    color: #CDA274;
+  color: #cda274;
 }
 .reviews-container {
-    height: 675px;
-    width: 1200px;
-    background: #F4F0EC;
-    border-radius: 70px;
-    padding-top: 103px;
+  height: 675px;
+  width: 1200px;
+  background: #f4f0ec;
+  border-radius: 70px;
+  padding-top: 103px;
 }
 .texttitle-reviews {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 45px;
-    margin-left: 361px;
-    width: 479px;
-    height: 59px;
-    text-align: center;
-    color: #292F36;
-    font-family: 'DM Serif Display';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 45px;
+  margin-left: 361px;
+  width: 479px;
+  height: 59px;
+  text-align: center;
+  color: #292f36;
+  font-family: "DM Serif Display";
 }
 .reviewer-item {
-    margin-top: 80px;
-    height: 287px;
-    width: 354px;
-    background-color: white;
-    border-radius: 30px;
-    margin-left: 18px;
+  margin-top: 80px;
+  height: 287px;
+  width: 354px;
+  background-color: white;
+  border-radius: 30px;
+  margin-left: 18px;
 }
 .feedback-container {
-    display: flex;
-    margin-left: -18px;
-    justify-content: center;
+  display: flex;
+  margin-left: -18px;
+  justify-content: center;
 }
 .reviewer-item__heading {
-    display: flex;
+  display: flex;
 }
-
 .reviewer-item__img {
-    margin-top: 50px;
-    margin-left: 35px;
+  margin-top: 50px;
+  margin-left: 35px;
+}
+.reviewer-item__img-picture {
+  width: 77px;
+  height: 77px;
 }
 .reviewer-item__title {
-    margin-top: 55px;
-    margin-left: 20px;   
+  margin-top: 55px;
+  margin-left: 20px;
 }
 .text-titlerewiews1 {
-    font-family: 'DM Serif Display';
-    color: #292F36;
-    font-size: 25px;
-    font-style: normal;
-    font-weight: 400;
-} 
+  font-family: "DM Serif Display";
+  color: #292f36;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 400;
+}
 .text-titlerewiews2 {
-    font-family: 'Jost';
-    font-style: normal;
-    font-size: 18px;
-    line-height: 27px;
-    color: #4D5053;
-    font-style: normal;
-    font-weight: 400;
+  font-family: "Jost";
+  font-style: normal;
+  font-size: 18px;
+  line-height: 27px;
+  color: #4d5053;
+  font-style: normal;
+  font-weight: 400;
 }
 .text-titlerewiews3 {
-    font-family: 'Jost';
-    font-style: normal;
-    font-size: 20px;
-    letter-spacing: 0.22px;
-    color: #4D5053;
-    margin-top: 25px;
-    margin-left: 35px;
+  font-family: "Jost";
+  font-style: normal;
+  font-size: 20px;
+  letter-spacing: 0.22px;
+  color: #4d5053;
+  margin-top: 25px;
+  margin-left: 35px;
 }
 
-
-
-
-
-
-.the_line{
-  border: 1px solid #E5E5E5;
+.the_line {
+  border: 1px solid #e5e5e5;
   width: 100vw;
 }
 
@@ -358,59 +356,58 @@ html {
   line-height: 33px;
 }
 
-.ftr-text{
-  color: #4D5053;
+.ftr-text {
+  color: #4d5053;
   margin: 25px 83px 30px 0;
   width: 326px;
 }
 
-.logo{
+.logo {
   margin-right: 40px;
 }
 
-.logo:last-child{
+.logo:last-child {
   margin-right: 0;
 }
 
-.copyright{
+.copyright {
   padding: 35px 0 36px;
-  color: #4D5053;
+  color: #4d5053;
 }
 
-.ftr-ftr{
+.ftr-ftr {
   width: 1440px;
   text-align: center;
 }
 
-.contactUs{
-  background-color: #292F36;
+.contactUs {
+  background-color: #292f36;
   border-radius: 70px;
   margin: 141px auto 129px;
 }
 
-
-.Wjti{
+.Wjti {
   color: #ffffff;
   font-size: 50px;
-  font-family: 'DM Serif Display', serif;
+  font-family: "DM Serif Display", serif;
   padding: 100px 0 9px;
   text-align: center;
 }
 
-.lastbutton{
+.lastbutton {
   padding: 31px 0 95px 0;
   text-align: center;
   display: flex;
   justify-content: center;
 }
 
-.CUGaFC{
+.CUGaFC {
   color: #ffffff;
   text-align: center;
 }
 
-.nikname{
-  color: #CDA274;
+.nikname {
+  color: #cda274;
 }
 
 .sctn_info_container {
@@ -494,4 +491,8 @@ html {
 .info_card-call-to-action {
   font-size: 22px;
   line-height: 33px;
+}
+
+.hidden-titles {
+  display: none;
 }
